--- a/BarterUp/header.css
+++ b/BarterUp/header.css
@@ -1,17 +1,12 @@
-/* Style the header with a grey background and some padding */
-
-.header {
+.header-right {
     overflow: hidden;
-    background-color: #eaa2a2;
+    background-color: #333;
     padding: 20px 10px;
 }
 
-
-/* Style the header links */
-
-.header a {
-    float: left;
-    color: black;
+.header-right a {
+    float: right;
+    color: white;
     text-align: center;
     padding: 12px;
     text-decoration: none;
@@ -20,47 +15,63 @@
     border-radius: 4px;
 }
 
-
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-
-.header a.logo {
-    font-size: 25px;
-    font-weight: bold;
+.user-drop {
+    float: right;
+    overflow: hidden;
 }
 
+.user-drop .user-dropbtn {
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
 
-/* Change the background color on mouse-over */
-
-.header a:hover {
+.header-right a:hover,
+.user-drop:hover .user-dropbtn {
     background-color: #ddd;
     color: black;
 }
 
-
-/* Style the active/current link*/
-
-.header a.active {
+.header-right a.active {
     background-color: dodgerblue;
     color: white;
 }
 
-
-/* Float the link section to the right */
-
-.header-right {
-    float: right;
+.user-dropcontent {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
+.user-dropcontent a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+.user-dropcontent a:hover {
+    background-color: #ddd;
+}
 
-@media screen and (max-width: 500px) {
-    .header a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    .header-right {
-        float: none;
-    }
+.user-drop:hover .user-dropcontent {
+    display: block;
+}
+
+.header {
+    float: left;
+    color: white;
+    font-size: 40px;
+    font-weight: 600;
 }
