--- a/BarterUp/currentTrades.css
+++ b/BarterUp/currentTrades.css
@@ -18,6 +18,7 @@
 
 body {
     background: #ebecf1;
+    position: relative;
     /*color: #b3b9b9;*/
 }
 
@@ -25,8 +26,20 @@ h1 {
     text-align: center;
 }
 
+.page_name {
+    width: 400px;
+    margin: 5px auto;
+    background: #fff;
+    padding: 15px;
+    border-radius: 2px;
+}
+
 .links {
-    margin-bottom: 20px;
+    width: 400px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: auto;
+    margin-right: 20px;
     background: #fff;
     padding: 15px;
     border-radius: 2px;
@@ -41,7 +54,7 @@ h1 {
     margin: 0 15px;
     font-weight: 600;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 15px;
     letter-spacing: 3px;
     cursor: pointer;
 }
