--- a/BarterUp/addInventory.css
+++ b/BarterUp/addInventory.css
@@ -3,11 +3,36 @@
     height: 85vh;
 }
 
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid rgba(204, 204, 204, 0.644);
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color:#FF7F50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color:#f1784c;
+  }
+
 .wrapper {
     margin: 50px auto;
     width: 350px;
-			padding: 20px;
-			margin: 0 auto;
+    padding: 20px;
+    margin: 0 auto;
 }
 
 * {
@@ -19,7 +44,6 @@
 }
 
 body {
-    font: 14px sans-serif;
     background: #ebecf1;
     position: relative;
     /*color: #b3b9b9;*/
