--- a/BarterUp/currentTrades.css
+++ b/BarterUp/currentTrades.css
@@ -1,13 +1,3 @@
-.container {
-    background: #ebecf1;
-    height: 85vh;
-}
-
-.wrapper {
-    width: 800px;
-    margin: 50px auto;
-}
-
 * {
     font-family: 'Montserrat', sans-serif;
     list-style: none;
@@ -18,102 +8,22 @@
 
 body {
     background: #ebecf1;
-    position: relative;
-    /*color: #b3b9b9;*/
 }
 
 h1 {
     text-align: center;
 }
 
+.wrapper {
+    width: 40%;
+    margin: 50px auto;
+}
+
 .page_name {
-    width: 400px;
+    width: 20%;
     margin: 5px auto;
     background: #fff;
     padding: 15px;
     border-radius: 2px;
-}
-
-.links {
-    width: 400px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: auto;
-    margin-right: 20px;
-    background: #fff;
-    padding: 15px;
-    border-radius: 2px;
-}
-
-.links ul {
-    display: flex;
-    justify-content: center;
-}
-
-.links ul li {
-    margin: 0 15px;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: 15px;
-    letter-spacing: 3px;
-    cursor: pointer;
-}
-
-.links ul li:hover,
-.links ul li.active {
-    color: #4abd3e;
-}
-
-.view_main {
-    background-color: #fff;
-    border-radius: 3px;
-    padding: 15px;
-}
-
-.view_item img {
-    width: 75px;
-}
-
-.list-view {
-    align-items: center;
-    justify-content: center;
-}
-
-.list-view .view_item {
-    border: 1px solid #e2efe1;
-    margin: 10px;
-    padding: 10px 20px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.list-view .view_item .vi_left {
-    margin-right: 25px;
-}
-
-.view_item .title {
-    font-weight: 600;
-}
-
-.view_item .item {
-    margin: 5px 0;
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 200;
-}
-
-.view_item .btn {
-    width: 125px;
-    background: #4abd3e;
-    color: #fff;
-    border-radius: 3px;
-    padding: 8px 5px;
-    text-align: center;
-    font-weight: 200;
-    cursor: pointer;
-}
-
-.view_item .btn:hover {
-    background: #3bd62b;
+    position: relative;
 }
