--- a/BarterUp/addInventory.css
+++ b/BarterUp/addInventory.css
@@ -30,9 +30,11 @@ input[type=submit]:hover {
 
 .wrapper {
     margin: 50px auto;
-    width: 350px;
+    width: 450px;
     padding: 20px;
-    margin: 0 auto;
+    
+    background: #fff;
+    border-radius: 3px;
 }
 
 * {
@@ -54,7 +56,6 @@ h1 {
 }
 
 .page_name {
-    width: 400px;
     margin: 5px auto;
     background: #fff;
     padding: 15px;
