--- a/BarterUp/myTrades.css
+++ b/BarterUp/myTrades.css
@@ -15,8 +15,9 @@ h1 {
 }
 
 .wrapper {
-    width: 40%;
-    margin: 50px auto;
+    width: 100%;
+    text-align: center;
+    margin: 3% auto;
 }
 
 .page_name {
@@ -26,4 +27,31 @@ h1 {
     padding: 15px;
     border-radius: 2px;
     position: relative;
+}
+
+.list-view {
+    font-size: 20px;
+    border-collapse: collapse;
+    width: 100%;
+    margin: 2%;
+}
+
+.list-view li {
+    display: inline-block;
+    width: 30%;
+}
+
+.list-view .title {
+    background-color: grey;
+    color: white;
+}
+
+.list-view:hover {
+    background-color: #ddd;
+}
+
+.list-view .trader,
+.list-view .tradee {
+    border: 1px solid #ddd;
+    padding: 8px;
 }
