--- a/BarterUp/currentTrades.css
+++ b/BarterUp/currentTrades.css
@@ -55,3 +55,25 @@ h1 {
     border: 1px solid #ddd;
     padding: 8px;
 }
+
+button {
+    width: 20%;
+    line-height: 5px;
+    background-color: #FF7F50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=text],
+select {
+    width: 50%;
+    height: 30px;
+    margin: 8px 0;
+    border: 1px solid rgba(204, 204, 204, 0.644);
+    border-radius: 4px;
+    box-sizing: border-box;
+}
