--- a/BarterUp/myTrades.css
+++ b/BarterUp/myTrades.css
@@ -55,3 +55,13 @@ h1 {
     border: 1px solid #ddd;
     padding: 8px;
 }
+
+button {
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: #4CAF50;
+    /* Green */
+    color: white;
+}
