--- a/BarterUp/currentTrades.css
+++ b/BarterUp/currentTrades.css
@@ -2,12 +2,13 @@
     font-family: 'Montserrat', sans-serif;
     list-style: none;
     margin: 0;
-    padding: 0;
+    /* padding: 0; */
     box-sizing: border-box;
 }
 
 body {
     background: #ebecf1;
+    
 }
 
 h1 {
@@ -55,7 +56,7 @@ h1 {
     border: 1px solid #ddd;
     padding: 8px;
 }
-
+/* 
 button {
     width: 20%;
     line-height: 5px;
@@ -66,7 +67,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
+} */
 
 input[type=text],
 select {
