modified css for current and mytrades pages.

--- a/BarterUp/currentTrades.css
+++ b/BarterUp/currentTrades.css
@@ -8,7 +8,6 @@
 
 body {
     background: #ebecf1;
-    
 }
 
 h1 {
@@ -16,14 +15,17 @@ h1 {
 }
 
 .wrapper {
-    width: 100%;
+    background: white;
+    width: 60%;
     text-align: center;
-    margin: 3% auto;
+    margin: 3% auto 3% auto;
+    padding: 1%;
+    border-radius: 1%;
 }
 
 .page_name {
     width: 20%;
-    margin: 5px auto;
+    margin: 1% auto 0 auto;
     background: #fff;
     padding: 15px;
     border-radius: 2px;
@@ -32,9 +34,10 @@ h1 {
 
 .list-view {
     font-size: 20px;
-    border-collapse: collapse;
-    width: 100%;
-    margin: 2%;
+    width: 80%;
+    margin: 2% auto 2% auto;
+    border: 1px solid rgb(8, 8, 8);
+    border-radius: 5px;
 }
 
 .list-view li {
@@ -43,7 +46,7 @@ h1 {
 }
 
 .list-view .title {
-    background-color: grey;
+    background-color: rgb(17, 15, 15);
     color: white;
 }
 
@@ -53,10 +56,9 @@ h1 {
 
 .list-view .trader,
 .list-view .tradee {
-    border: 1px solid #ddd;
     padding: 8px;
 }
- 
+
 .submitButton {
     width: 20%;
     line-height: 5px;
@@ -67,7 +69,7 @@ h1 {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-} 
+}
 
 input[type=text],
 select {
