--- a/BarterUp/myTrades.css
+++ b/BarterUp/myTrades.css
@@ -20,11 +20,11 @@ h1 {
     text-align: center;
     margin: 3% auto 3% auto;
     padding: 1%;
-    border-radius: 1%;
+    border-radius: 4px;
 }
 
 .page_name {
-    width: 20%;
+    width: 100%;
     margin: 1% auto 0 auto;
     background: #fff;
     padding: 15px;
@@ -36,17 +36,17 @@ h1 {
     font-size: 20px;
     width: 80%;
     margin: 2% auto 2% auto;
-    border: 1px solid rgb(8, 8, 8);
+    border: 1px solid #e2efe1;
     border-radius: 5px;
 }
 
 .list-view li {
-    display: inline-block;
+    display: inline-table;
     width: 30%;
 }
 
 .list-view .title {
-    background-color: rgb(17, 15, 15);
+    background-color: #333;
     color: white;
 }
 
