--- a/BarterUp/addInventory.css
+++ b/BarterUp/addInventory.css
@@ -29,8 +29,9 @@ input[type=submit]:hover {
   }
 
 .wrapper {
-    margin: 50px auto;
-    width: 450px;
+    margin: 3% auto 3% auto;
+    /*margin: 50px auto;*/
+    width: 600px;
     padding: 20px;
     
     background: #fff;
