--- a/BarterUp/inventory.css
+++ b/BarterUp/inventory.css
@@ -92,7 +92,7 @@ h1 {
 
 .list-view .view_item .vi_left {
     width: 150px;
-    margin-right: 25px;
+    margin-right: 50px;
 }
 
 .list-view .view_item .vi_middle {
@@ -101,7 +101,7 @@ h1 {
 }
 
 .list-view .view_item .vi_right {
-    width: 300px;
+    width: 200px;
 }
 .list-view .view_item .vi_rightmost {
     margin-left: 50px;
@@ -110,6 +110,7 @@ h1 {
 }
 
 .view_item .title {
+    font-size: 20px;
     font-weight: 600;
 }
 
