--- a/BarterUp/inventory.css
+++ b/BarterUp/inventory.css
@@ -7,17 +7,16 @@
     width: 800px;
     margin-top: 50px;
     margin: 3% auto 3% auto;
-    
 }
- 
+
 * {
     font-family: 'Montserrat', sans-serif;
     list-style: none;
     margin: 0;
     /*padding: 0;*/
     box-sizing: border-box;
-} 
- 
+}
+
 body {
     background: #ebecf1;
     position: relative;
@@ -25,7 +24,7 @@ body {
 
 h1 {
     text-align: center;
-} 
+}
 
 .page_name {
     width: 400px;
@@ -76,16 +75,14 @@ h1 {
 }
 
 .list-view .view_item {
-
     border: 1px solid #e2efe1;
     margin: 10px;
     padding: 10px 20px;
     display: flex;
     /*align-items: center;*/
     height: 75px;
-    max-height:100px;
+    max-height: 100px;
 }
-
 
 .list-view .view_item:last-child {
     margin-bottom: 0;
@@ -104,6 +101,7 @@ h1 {
 .list-view .view_item .vi_right {
     width: 200px;
 }
+
 .list-view .view_item .vi_rightmost {
     margin-left: 50px;
     margin-top: 10px;
@@ -116,7 +114,6 @@ h1 {
 }
 
 .view_item .content {
-
     font-size: 18px;
 }
 
@@ -124,6 +121,7 @@ h1 {
     width: 75px;
     background: #FF7F50;
     color: #fff;
+    border: none;
     border-radius: 3px;
     padding: 8px 5px;
     text-align: center;
