updated inventory/ sql file
remove items from inventory, trigger, cascade

--- a/BarterUp/header.css
+++ b/BarterUp/header.css
@@ -1,3 +1,7 @@
+/*body {
+    background-image: url("backgroundstuff.png");
+}
+*/
 .header-right {
     overflow: hidden;
     background-color: #333;
