--- a/BarterUp/header.css
+++ b/BarterUp/header.css
@@ -1,7 +1,7 @@
-/*body {
+body {
     background-image: url("backgroundstuff.png");
 }
-*/
+
 .header-right {
     overflow: hidden;
     background-color: #333;
@@ -39,7 +39,7 @@
 .header-right a:hover,
 .user-drop:hover .user-dropbtn {
     background-color: #ddd;
-    color:rgb(20, 100, 150);
+    color: rgb(20, 100, 150);
 }
 
 .header-right a.active {
