--- a/BarterUp/header.css
+++ b/BarterUp/header.css
@@ -1,10 +1,10 @@
 body {
-    background-image: url("backgroundstuff.png");
+    background-image: url("newshit.jpg");
 }
 
 .header-right {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(65, 64, 64);
     padding: 20px 10px;
 }
 
@@ -54,6 +54,7 @@ body {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    margin-left: -35px;
 }
 
 .user-dropcontent a {
