--- a/BarterUp/inventory.css
+++ b/BarterUp/inventory.css
@@ -1,12 +1,8 @@
-.container {
-    background: #ebecf1;
-    height: 85vh;
-}
-
 .wrapper {
     width: 800px;
     margin-top: 50px;
     margin: 3% auto 3% auto;
+    border-radius: 5px;
 }
 
 * {
@@ -27,11 +23,10 @@ h1 {
 }
 
 .page_name {
-    width: 400px;
     margin: 5px auto;
     background: #fff;
     padding: 15px;
-    border-radius: 2px;
+    border-radius: 4px;
 }
 
 .links {
@@ -65,7 +60,7 @@ h1 {
 }
 
 .view_main {
-    background-color: #fff;
+    background: rgb(243, 235, 235);
     border-radius: 3px;
     padding: 15px;
 }
@@ -75,13 +70,14 @@ h1 {
 }
 
 .list-view .view_item {
-    border: 1px solid #e2efe1;
+    border: 1px solid black;
     margin: 10px;
     padding: 10px 20px;
     display: flex;
     /*align-items: center;*/
     height: 75px;
     max-height: 100px;
+    border-radius: 5px;
 }
 
 .list-view .view_item:last-child {
@@ -100,7 +96,6 @@ h1 {
 }
 
 .list-view .view_item .vi_right {
-  
     width: 250px;
 }
 
@@ -109,7 +104,6 @@ h1 {
     margin-left: 10px;
     /*align-items: center;*/
 }
-
 
 .list-view .view_item .vi_rightmostmost {
     margin-left: 10px;
