--- a/BarterUp/myTrades.css
+++ b/BarterUp/myTrades.css
@@ -15,12 +15,12 @@ h1 {
 }
 
 .wrapper {
-    background: white;
+    background: rgb(243, 235, 235);
     width: 50%;
     text-align: center;
     margin: 3% auto 3% auto;
     padding: 1%;
-    border-radius: 4px;
+    border-radius: 5px;
 }
 
 .page_name {
@@ -28,7 +28,7 @@ h1 {
     margin: 1% auto 0 auto;
     background: #fff;
     padding: 15px;
-    border-radius: 2px;
+    border-radius: 5px;
     position: relative;
 }
 
@@ -36,7 +36,7 @@ h1 {
     font-size: 20px;
     width: 80%;
     margin: 2% auto 2% auto;
-    border: 1px solid #e2efe1;
+    border: 1px solid black;
     border-radius: 5px;
 }
 
