--- a/BarterUp/header.css
+++ b/BarterUp/header.css
@@ -4,7 +4,7 @@ body {
 
 .header-right {
     overflow: hidden;
-    background-color: rgb(65, 64, 64);
+    background-color: #1d2c4d;
     padding: 20px 10px;
 }
 
