--- a/BarterUp/inventory.css
+++ b/BarterUp/inventory.css
@@ -75,7 +75,7 @@ h1 {
 }
 
 .list-view .view_item {
-    border: 1px solid #e2efe1;
+    border: 1px solid #1d2c4d;
     margin: 10px;
     padding: 10px 20px;
     display: flex;
