--- a/BarterUp/tradeHistory.css
+++ b/BarterUp/tradeHistory.css
@@ -36,7 +36,7 @@ h1 {
     font-size: 20px;
     width: 80%;
     margin: 2% auto 2% auto;
-    border: 1px solid #1d2c4d;
+    border: 1px solid black;
     border-radius: 5px;
 }
 
