--- a/BarterUp/unauthHeader.css
+++ b/BarterUp/unauthHeader.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("newshit.jpg");
+    background-image: url("Alizarin-Red-Desktop-background.jpg");
     margin: 0;
     padding: 0;
 }
