--- a/BarterUp/inventory.css
+++ b/BarterUp/inventory.css
@@ -1,6 +1,8 @@
 .wrapper {
     width: 800px;
     margin-top: 50px;
+    background: #1d2c4d;
+    color: white;
     margin: 3% auto 3% auto;
     border-radius: 5px;
 }
@@ -14,7 +16,6 @@
 }
 
 body {
-    background: #ebecf1;
     position: relative;
 }
 
@@ -25,6 +26,7 @@ h1 {
 .page_name {
     margin: 5px auto;
     background: #fff;
+    color: black;
     padding: 15px;
     border-radius: 4px;
 }
@@ -60,7 +62,6 @@ h1 {
 }
 
 .view_main {
-    background: rgb(243, 235, 235);
     border-radius: 3px;
     padding: 15px;
 }
@@ -70,7 +71,7 @@ h1 {
 }
 
 .list-view .view_item {
-    border: 1px solid black;
+    border: 1px solid white;
     margin: 10px;
     padding: 10px 20px;
     display: flex;
