finished styling the login and signup pages

--- a/BarterUp/header.css
+++ b/BarterUp/header.css
@@ -1,10 +1,10 @@
 body {
-    background-image: url("Cool-Desktop-Backgrounds-HD.jpg");
+    background-image: url("newshit.jpg");
 }
 
 .header-right {
     overflow: hidden;
-    background-color: #bd58b4;
+    background-color: #1d2c4d;
     padding: 20px 10px;
 }
 
