--- a/BarterUp/login.css
+++ b/BarterUp/login.css
@@ -3,10 +3,18 @@ body {
 }
 
 .wrapper {
-    background: rgb(243, 235, 235);
+    background: #1d2c4d;
     width: 350px;
     padding: 20px;
     margin: 5% auto;
+    border-radius: 5px;
+}
+
+h1,
+h2,
+p,
+.form-group label {
+    color: white;
 }
 
 input[type=text],
@@ -59,4 +67,8 @@ input[type=submit]:hover {
 
 input[type=reset]:hover {
     background-color: #797979;
+}
+
+.signupLink {
+    color: yellow;
 }
