--- a/BarterUp/signup.css
+++ b/BarterUp/signup.css
@@ -3,10 +3,18 @@ body {
 }
 
 .wrapper {
-    background: rgb(243, 235, 235);
+    background: #1d2c4d;
     width: 350px;
     padding: 20px;
     margin: 5% auto;
+    border-radius: 5px;
+}
+
+h1,
+h2,
+p,
+.row label {
+    color: white;
 }
 
 input[type=text],
@@ -16,7 +24,7 @@ select {
     margin: 8px 0;
     display: inline-block;
     border: 1px solid rgba(204, 204, 204, 0.644);
-    border-radius: 4px;
+    border-radius: 5px;
     box-sizing: border-box;
 }
 
@@ -59,4 +67,8 @@ input[type=submit]:hover {
 
 input[type=reset]:hover {
     background-color: #797979;
+}
+
+.loginLink {
+    color: yellow;
 }
