finished styling shit.

--- a/BarterUp/addInventory.css
+++ b/BarterUp/addInventory.css
@@ -53,8 +53,7 @@ h1 {
 
 .page_name {
     margin: 5px auto;
-    background: #fff;
-    color: #000;
+    color: #fff;
     padding: 15px;
     border-radius: 2px;
 }
