--- a/BarterUp/currentTrades.css
+++ b/BarterUp/currentTrades.css
@@ -22,17 +22,20 @@ h1 {
 .page_name {
     width: 100%;
     margin: 1% auto 0 auto;
-    background: #fff;
+    color: #fff;
     padding: 15px;
     border-radius: 2px;
     position: relative;
 }
 
 .list-view {
+    color: black;
+    background: white;
     width: 80%;
     font-size: 20px;
     margin: 2% auto 2% auto;
     border: 1px solid white;
+    box-shadow: 0 8px 16px 0 rgba(255, 253, 253, 0.2);
     border-radius: 5px;
 }
 
@@ -42,18 +45,18 @@ h1 {
 }
 
 .list-view .title {
-    background-color: white;
-    color: black;
+    background-color: #1d2c4d;
+    color: white;
 }
 
 .initiator-name,
 .initiator-item {
-    color: white;
+    color: black;
 }
 
 .tradee-name,
 .tradee-item {
-    color: white;
+    color: black;
 }
 
 .list-view .trader,
