--- a/BarterUp/inventory.css
+++ b/BarterUp/inventory.css
@@ -25,8 +25,7 @@ h1 {
 
 .page_name {
     margin: 5px auto;
-    background: #fff;
-    color: black;
+    color: white;
     padding: 15px;
     border-radius: 4px;
 }
@@ -72,6 +71,8 @@ h1 {
 
 .list-view .view_item {
     border: 1px solid white;
+    background: white;
+    color: black;
     margin: 10px;
     padding: 10px 20px;
     display: flex;
@@ -79,6 +80,9 @@ h1 {
     height: 75px;
     max-height: 100px;
     border-radius: 5px;
+    background: white;
+    color: black;
+    box-shadow: 0 8px 16px 0 rgba(241, 239, 239, 0.2);
 }
 
 .list-view .view_item:last-child {
